fix uneven width of svg

--- a/website/src/css/styles.css
+++ b/website/src/css/styles.css
@@ -307,6 +307,11 @@ body, html {
     display: none;
   }
 
+  .tradeVisualization #graph svg {
+    width: 100%;
+    height: 100%;
+  }
+
   .tradeVisualization.visible {
     transform: translateY(0);
     display: block;
